--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  http: ^0.13.5
+  just_audio: any
+  just_audio_mpv: any
 
 dev_dependencies:
   flutter_test:
