--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   get: ^4.6.5
   http: ^0.13.5
   just_audio: any
-  just_audio_mpv: any
+  # just_audio_mpv: any
 
 dev_dependencies:
   flutter_test:
